# modmemcachedinclude

./: .hgignore  FAQ  INSTALL  LICENSE  Makefile  Makefile.am  README  TODO  build.sh  configure.ac  mod_memcached_include.c  mod_memcached_include.h  modules.mk
doc/: INSTALL
m4/: apr_memcache.m4
misc/: modmemcachedinclude.graffle
patches/: configure.diff
src/: Makefile.am  mod_memcached_include.c  ssi_include_memcached.c
tests/: backendgen.php  lipsum.txt  mod_memcached_include_tests  pull-filesystem.shtml  pull-memcached.shtml  push.php
